kubernetes/ingress/1-nginx-base.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-base
  name: nginx-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-base
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-base
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
