kubernetes/ingress/2-ingress-targetPaths.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-2
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-base
          servicePort: 80
      - path: /blue
        backend:
          serviceName: nginx-blue
          servicePort: 80
